--- a/compose.yaml
+++ b/compose.yaml
@@ -2,11 +2,11 @@ services:
   postgres:
     image: 'postgres:latest'
     environment:
-      - 'POSTGRES_DB=mydatabase'
-      - 'POSTGRES_PASSWORD=secret'
-      - 'POSTGRES_USER=myuser'
+      POSTGRES_DB: mydatabase
+      POSTGRES_PASSWORD: ${DATABASE_PASSWORD}
+      POSTGRES_USER: ${DATABASE_USER}
     ports:
-      - '5432'
+      - '5432:5432'
     volumes:
       - 'postgres_data:/var/lib/postgresql/data'
 
