--- a/compose.yaml
+++ b/compose.yaml
@@ -2,13 +2,15 @@ services:
   postgres:
     image: 'postgres:latest'
     environment:
-      POSTGRES_DB: mydatabase
+      POSTGRES_DB: mydb
       POSTGRES_PASSWORD: ${DATABASE_PASSWORD}
       POSTGRES_USER: ${DATABASE_USER}
     ports:
       - '5432:5432'
     volumes:
       - 'postgres_data:/var/lib/postgresql/data'
+      # We create a test database on startup with a script. Could also be separate service.
+      - './scripts:/docker-entrypoint-initdb.d'
 
 volumes:
   postgres_data:
