--- a/.env.example
+++ b/.env.example
@@ -1,3 +1,4 @@
-DATABASE_URL=
+DATABASE_URL=jdbc:postgresql://localhost:5432/mydb
+TEST_DATABASE_URL=jdbc:postgresql://localhost:5432/testdb
 DATABASE_USER=
 DATABASE_PASSWORD=
