--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -7,6 +7,19 @@ on:
 jobs:
   test:
     runs-on: ubuntu-latest
+    env:
+      DATABASE_USER: ${{ secrets.DATABASE_USER }}
+      DATABASE_PASSWORD: ${{ secrets.DATABASE_PASSWORD }}
+      TEST_DATABASE_URL: jdbc:postgresql://localhost:5432/testdb
+    services:
+        postgres:
+            image: postgres:latest
+            env:
+              POSTGRES_USER: ${{ secrets.DATABASE_USER }}
+              POSTGRES_PASSWORD: ${{ secrets.DATABASE_PASSWORD }}
+              POSTGRES_DB: 'testdb'
+            ports:
+            - 5432:5432
     steps:
       - uses: actions/checkout@v4
       - name: Setup Java JDK
