--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -12,14 +12,14 @@ jobs:
       DATABASE_PASSWORD: ${{ secrets.DATABASE_PASSWORD }}
       TEST_DATABASE_URL: jdbc:postgresql://localhost:5432/testdb
     services:
-        postgres:
-            image: postgres:latest
-            env:
-              POSTGRES_USER: ${{ secrets.DATABASE_USER }}
-              POSTGRES_PASSWORD: ${{ secrets.DATABASE_PASSWORD }}
-              POSTGRES_DB: 'testdb'
-            ports:
-            - 5432:5432
+      postgres:
+        image: postgres:latest
+        env:
+          POSTGRES_USER: ${{ secrets.DATABASE_USER }}
+          POSTGRES_PASSWORD: ${{ secrets.DATABASE_PASSWORD }}
+          POSTGRES_DB: 'testdb'
+        ports:
+          - 5432:5432
     steps:
       - uses: actions/checkout@v4
       - name: Setup Java JDK
@@ -51,3 +51,5 @@ jobs:
         with:
           push: true
           tags: ${{ secrets.DOCKERHUB_USERNAME }}/${{ github.event.repository.name }}:${{ github.sha }}
+          cache-from: type=gha
+          cache-to: type=gha,mode=max
