--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -31,6 +31,12 @@ jobs:
       - name: Test with Maven
         run: mvn -B verify
 
+      - name: Upload artifact
+        uses: actions/upload-artifact@v3
+        with:
+          name: jar
+          path: target/*.jar
+
   deploy-to-docker:
     needs: test
     runs-on: ubuntu-latest
@@ -46,9 +52,16 @@ jobs:
           username: ${{ secrets.DOCKERHUB_USERNAME }}
           password: ${{ secrets.DOCKERHUB_TOKEN }}
 
+      - name: Download artifact
+        uses: actions/download-artifact@v3
+        with:
+          name: jar
+          path: target
+
       - name: Build and push
         uses: docker/build-push-action@v5
         with:
+          file: Dockerfile_artifact
           push: true
           tags: ${{ secrets.DOCKERHUB_USERNAME }}/${{ github.event.repository.name }}:${{ github.sha }}
           cache-from: type=gha
