--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -31,19 +31,10 @@ jobs:
       - name: Test with Maven
         run: mvn -B verify
 
-      - name: Upload artifact
-        uses: actions/upload-artifact@v3
-        with:
-          name: jar
-          path: target/*.jar
-
   deploy-to-docker:
     needs: test
     runs-on: ubuntu-latest
     steps:
-      # Needed for Dockerfile_artifact
-      - uses: actions/checkout@v4
-
       - name: Setup Docker Buildx
         uses: docker/setup-buildx-action@v3
 
@@ -53,13 +44,7 @@ jobs:
           username: ${{ secrets.DOCKERHUB_USERNAME }}
           password: ${{ secrets.DOCKERHUB_TOKEN }}
 
-      - name: Download artifact
-        uses: actions/download-artifact@v3
-        with:
-          name: jar
-          path: target
-
-      - name: Extract meta-data
+      - name: Extract metadata
         uses: docker/metadata-action@v5
         id: meta
         with:
@@ -68,10 +53,9 @@ jobs:
       - name: Build and push
         uses: docker/build-push-action@v5
         with:
-          file: Dockerfile_artifact
-          # Needed to prevent default Git context overwriting the downloaded artifact
-          context: .
+          file: Dockerfile_src
           push: true
-          tags: ${{ secrets.DOCKERHUB_USERNAME }}/${{ github.event.repository.name }}:${{ github.sha }}
+          tags: ${{ steps.meta.outputs.tags }}
+          labels: ${{ steps.meta.outputs.labels }}
           cache-from: type=gha
           cache-to: type=gha,mode=max
