static analysis workflow

--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -31,6 +31,9 @@ jobs:
       - name: Test with Maven
         run: mvn -B verify
 
+  static-code-analysis:
+    uses: ./.github/workflows/static-analysis.yml
+
   deploy-to-docker:
     needs: test
     runs-on: ubuntu-latest
