disables on not PR

--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -33,6 +33,7 @@ jobs:
 
   static-code-analysis:
     uses: ./.github/workflows/static-analysis.yml
+    secrets: inherit
 
   deploy-to-docker:
     needs: test
