--- a/.github/workflows/static-analysis.yml
+++ b/.github/workflows/static-analysis.yml
@@ -1,5 +1,9 @@
 name: Static code analysis
-on: workflow_call
+on:
+  workflow_call:
+    secrets:
+      token:
+        required: true
 
 jobs:
   static-code-analysis:
@@ -27,9 +31,12 @@ jobs:
 
       - name: Checkstyle
         uses: nikitasavinov/checkstyle-action@0.6.0
+        if: github.event_name == 'pull_request'
         with:
+          github_token: ${{ secrets.token }}
           checkstyle_config: 'sun_checks.xml'
           fail_on_error: false # default: false
 
-#      - name: JaCoCo
-#        uses: Madrapps/jacoco-report@v1
+      - name: JaCoCo
+        uses: Madrapps/jacoco-report@v1
+        if: github.event_name == 'pull_request'
