--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -1,43 +1,18 @@
-name: Test and Deploy
+name: Deploy
 on:
-  push:
-    branches:
-      - main
+  workflow_call:
+    inputs:
+      file:
+        type: string
+        default: Dockerfile
+    secrets:
+      DOCKERHUB_USERNAME:
+        required: true
+      DOCKERHUB_TOKEN:
+        required: true
 
 jobs:
-  test:
-    runs-on: ubuntu-latest
-    env:
-      DATABASE_USER: ${{ secrets.DATABASE_USER }}
-      DATABASE_PASSWORD: ${{ secrets.DATABASE_PASSWORD }}
-      TEST_DATABASE_URL: jdbc:postgresql://localhost:5432/testdb
-    services:
-      postgres:
-        image: postgres:latest
-        env:
-          POSTGRES_USER: ${{ secrets.DATABASE_USER }}
-          POSTGRES_PASSWORD: ${{ secrets.DATABASE_PASSWORD }}
-          POSTGRES_DB: 'testdb'
-        ports:
-          - 5432:5432
-    steps:
-      - uses: actions/checkout@v4
-      - name: Setup Java JDK
-        uses: actions/setup-java@v3
-        with:
-          distribution: 'temurin'
-          java-version: '17'
-          cache: 'maven'
-      - name: Test with Maven
-        run: mvn -B verify
-
-  static-code-analysis:
-    uses: ./.github/workflows/static-analysis.yml
-    secrets:
-      github_token: ${{ secrets.GITHUB_TOKEN }}
-
   deploy-to-docker:
-    needs: test
     runs-on: ubuntu-latest
     steps:
       - name: Setup Docker Buildx
@@ -65,7 +40,7 @@ jobs:
       - name: Build and push
         uses: docker/build-push-action@v5
         with:
-          file: Dockerfile_src
+          file: ${{ github.event.inputs.file }}
           push: true
           tags: ${{ steps.meta.outputs.tags }}
           labels: ${{ steps.meta.outputs.labels }}
